# random-episode

./: Cargo.toml  Dockerfile  fly.toml
.github/workflows/: deploy-to-fly.yml
data/: brooklyn-nine-nine.toml  community.toml  friends.toml  halt-and-catch-fire.toml  mad-men.toml  peaky-blinders.toml  silicon-valley.toml  superstore.toml  the-office.toml
src/: data.rs  main.rs
templates/: index.html
