[package]
name = "episode-randomizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.5"
hyper = "0.14.18"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
tera = "1.15.0"
tokio = { version = "1.18.2", features = ["full"] }
toml = "0.5.9"
tower-http = { version = "0.3.3", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
